--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
   pull_request:
     branches:
       - master
+      - "!changeset-release/master"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
