--- a/packages/image/package.json
+++ b/packages/image/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.13",
+    "@google-cloud/storage": "^7.15.0",
     "@nutshelllabs/png-js": "^2.2.1",
     "cross-fetch": "^3.1.5"
   },
