Allow running release workflow on our fork since we've renamed package
Fix syntax?

Add double quotes

Fix ternary

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
 
   release:
     # Prevents this action from running on forks
-    if: github.repository_owner == 'diegomura'
+    if: github.repository_owner == 'nutshelllabs'
     name: Create Release PR or Publish to npm
     needs: [test]
     runs-on: ubuntu-latest
